--- a/LmpClient/Localization/XML/Danish/ServerListWindowText.xml
+++ b/LmpClient/Localization/XML/Danish/ServerListWindowText.xml
@@ -16,5 +16,5 @@
   <ServerDetailTitle>Tilslut til server</ServerDetailTitle>
   <Password>Kodeord</Password>
   <Connect>Tilslut</Connect>
-  <Dedicated>Dedicated</Dedicated>
+  <Dedicated>Dedikeret</Dedicated>
 </ServerListWindowText>
