--- a/LmpClient/Localization/XML/Danish/UpdateWindowText.xml
+++ b/LmpClient/Localization/XML/Danish/UpdateWindowText.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-16"?>
 
 <UpdateWindowText xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <Title>New update available</Title>
-  <Text>There is a new version of LMP available for download</Text>
-  <StillCompatible>Your current LMP version is compatible with the latest version</StillCompatible>
-  <NotCompatible>Your current LMP version is not compatible with the latest version</NotCompatible>
-  <Changelog>Changelog</Changelog>
-  <CurrentVersion>Your current version:</CurrentVersion>
-  <LatestVersion>Latest version:</LatestVersion>
+  <Title>Ny opdatering tilgængelig</Title>
+  <Text>Der er en ny version af LMP tilgængelig til download</Text>
+  <StillCompatible>Din nuværende LMP version er kompatible med den seneste version</StillCompatible>
+  <NotCompatible>Din nuværende LMP version er ikke kompatible med den seneste version</NotCompatible>
+  <Changelog>Ændringslog</Changelog>
+  <CurrentVersion>Din nuværende version:</CurrentVersion>
+  <LatestVersion>Seneste version:</LatestVersion>
 </UpdateWindowText>
